# rpi-rest-usb-hub

./: .flake8  app.py  pyproject.toml  rest-usb-switch.service  start.sh
